# zgame

./: .gitignore  Cargo.toml  package-lock.json
client/: .env  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client-wasm/: Cargo.toml  wasm.md
client-wasm/src/: lib.rs
client/public/: index.html  manifest.json  sitemap.xml
client/public/wasm/: client_wasm.js  client_wasm_bg.wasm
client/src/: App.tsx  clientConfig.js  clientConfig.ts  main.tsx  serviceWorker.ts  vite-env.d.ts
client/src/api/: secretPokerClient.ts  wsClient.ts
client/src/components/analytics/: GoogleAnalytics.tsx
client/src/components/auth/: LoginModal.tsx
client/src/components/buttons/: Button.js  Button.tsx  CloseButton.tsx  HamburgerButton.tsx  ShowPasswordButton.tsx
client/src/components/cookies/: CookieBanner.tsx
client/src/components/crypto/: CryptoEventStream.tsx  EncryptedCard.tsx  NarrationOverlay.tsx  OnchainVerificationBadge.tsx  ShuffleProofVisualizer.tsx
client/src/components/decoration/: TiledBackgroundImage.tsx  WatermarkLogo.tsx  WatermarkText.tsx  WatermarkWrapper.tsx
client/src/context/: Providers.js  Providers.tsx
client/src/helpers/: api.js  api.ts  cookies.ts  generateUUID.ts  getToken.ts  httpClient.ts  logger.ts  setAuthToken.ts
client/src/hooks/: useActionLoading.ts  useAuth.ts  useContentful.ts  useCookie.ts  useNavMenu.ts  useScrollToTopOnPageLoad.ts  useServiceWorker.ts  useTableJoin.tsx
client/src/layouts/: _MainLayout.tsx
client/src/pages/: Dashboard.js  Dashboard.tsx  HomePage.tsx  Landing.tsx  LoginPage.tsx  MainPage.tsx  NotFoundPage.tsx  Play.js  Play.styles.ts  Play.tsx  RegistrationPage.tsx  SecretPokerGameTable.styles.ts  SecretPokerGameTable.tsx  SecretPokerHomePage.styles.ts  SecretPokerHomePage.tsx  SecretPokerLobby.tsx  StaticPage.tsx  ZkLoginCallback.tsx
client/src/pokergame/: actions.js  actions.ts
client/src/styles/: Global.ts  SecretPokerHome.css  theme.ts
client/src/sui/: config.ts  sponsoredTx.test.ts  sponsoredTx.ts  suiGameActions.ts  utils.ts  zkLoginSession.ts
client/src/types/: api.ts  auth.ts  game.ts  global.d.ts  player.ts  sui.ts
poker_protocol/: Cargo.toml
poker_protocol/src/: lib.rs
poker_protocol/src/card_reveal/: expel_protocol.rs  mod.rs  reveal_token_proof.rs
poker_protocol/src/crypto/: curve.rs  elgamal.rs  mod.rs  types.rs  zk_primitives.rs
poker_protocol/src/z_poker/: card.rs  convert.rs  deck.rs  hand.rs  key_manager.rs  mod.rs  protocol.rs
poker_protocol/src/z_poker/protocol/: client.rs  expel.rs  game.rs  mod.rs  rounds.rs  types.rs
poker_protocol/src/zk_shuffle/: consistency.rs  dleq_proof.rs  error.rs  generalized_schnorr_proof.rs  leave_proof.rs  mod.rs  reconstruction.rs  remask_proof.rs  reveal_token_proof.rs  shuffle_proof.rs  transcript_ext.rs
poker_protocol/src/zk_shuffle/reconstruction/: chaum_pedersen.rs  mod.rs  swap_out.rs  tests.rs
poker_protocol/tests/: move_verify_tests.rs
sui-serialization/: Cargo.toml
sui-serialization/src/: lib.rs
texas/: .env.example  Cargo.toml  cfg.txt  read.md
texas/src/: auth.rs  config.rs  handlers.rs  join_and_shuffle_testnet.rs  main.rs  models.rs  move_verify_tests.rs  socket.rs  sponsor.rs  sui_events.rs  sui_graphql_sub.rs  sui_grpc.rs  sui_listener.rs  sui_query.rs  sui_webhook.rs  wallet_auth.rs
texas/src/pokergame/: actions.rs  betting.rs  deck.rs  error.rs  evaluator.rs  game_state.rs  hand_rank.rs  mod.rs  player.rs  seat.rs  side_pot.rs  table.rs
texas/src/pokergame/table/: betting.rs  events.rs  lifecycle.rs  mod.rs  phases.rs  pot.rs  reconstruct.rs  reveal.rs  seat_mgmt.rs  shuffle.rs
texas/src/relayer/: apply_betting.rs  apply_lifecycle.rs  apply_player.rs  apply_reconstruct.rs  apply_reveal.rs  apply_shuffle.rs  dispatch.rs  event_classify.rs  mod.rs  proof_bytes.rs  ptb.rs  retry.rs  submit.rs  sync.rs  tick.rs  util.rs
texas/src/socket/: broadcast.rs  game_loop.rs  handlers.rs  mod.rs  table_events.rs
texas_poker_move/: Move.toml  Published.toml  readme.md
texas_poker_move/package_summaries/: address_mapping.json
texas_poker_move/package_summaries/std/: macros.json  option.json  u128.json  u16.json  u256.json  u32.json  u64.json  u8.json  vector.json
texas_poker_move/package_summaries/sui/: display.json  display_registry.json  dynamic_field.json  dynamic_object_field.json  kiosk.json  rangeproofs.json
texas_poker_move/package_summaries/texas_poker/: betting.json  bls_elgamal.json  bls_scalar.json  bls_transcript.json  card.json  chaum_pedersen.json  hand_evaluator.json  leave_proof.json  reconstruct_proof.json  remask_proof.json  reveal_token_proof.json  schnorr_proof.json  shuffle_proof.json  side_pot.json  table.json  table_constants.json  table_events.json  table_serialization.json  zk_verifier.json
texas_poker_move/sources/: betting.move  bls_elgamal.move  bls_scalar.move  bls_transcript.move  card.move  chaum_pedersen.move  hand_evaluator.move  leave_proof.move  reconstruct_proof.move  remask_proof.move  reveal_token_proof.move  schnorr_proof.move  shuffle_proof.move  side_pot.move  table.move  table_constants.move  table_events.move  table_serialization.move  zk_verifier.move
texas_poker_move/tests/: aggregated_pk_tests.move  betting_tests.move  bls_elgamal_tests.move  bls_scalar_tests.move  bls_transcript_tests.move  card_tests.move  chaum_pedersen_tests.move  hand_evaluator_tests.move  hand_flow_tests.move  reconstruct_proof_tests.move  remask_proof_tests.move  reveal_token_proof_tests.move  schnorr_proof_tests.move  shuffle_proof_tests.move  shuffle_timeout_tests.move  side_pot_tests.move  table_integration_tests.move  table_test_helpers.move  table_tests.move  zk_verifier_tests.move
texas_zchain/: Cargo.toml
texas_zchain/src/: betting.rs  card.rs  contract.rs  hand_evaluator.rs  lib.rs  showdown.rs  side_pot.rs
vin_game_simulator/: Cargo.toml  README.md  keys.json  run_simulation.sh
vin_game_simulator/src/: main.rs  socketio_client.rs  wallet_login.rs
(+84 files in other folders)
