[package]
name = "client-wasm"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
z_game = { path = "../../z_game" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
rand_core = "0.6"
ff = "0.13"
elliptic-curve = "0.13"
serde-wasm-bindgen = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
