[package]
name = "client-wasm"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
poker_protocol = { path = "../poker_protocol" }
sui-serialization = { path = "../sui-serialization", default-features = false }
clear_on_drop = { version = "0.2", features = ["no_cc"] }
subtle = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
base64 = "0.22"
rand_core = "0.6"
serde-wasm-bindgen = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
