[package]
name = "poker_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
rand_core = "0.6.4"
rand = "0.8.5"
lazy_static = "1.4.0"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic","precomputed-tables"] }
ff = "0.13.1"
group = "0.13.0"
sha2 = "0.11.0"
sha3 = "0.10.8"
hex = "0.4"
tracing = "0.1"
serde = "1"
serde_json = "1"
