[package]
name = "poker_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6.4"
rand = "0.8.5"
lazy_static = "1.4.0"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4"
tracing = "0.1"
serde = "1"
serde_json = "1"
halo2curves = "0.7"
rayon = "1.10"
merlin = "3"
blstrs = "0.7"
group = "0.13"
ff = "0.13"
