[package]
name = "sui-serialization"
version = "0.1.0"
edition = "2021"
description = "Sui 链上 Move 合约序列化格式转换工具（hex JSON ↔ flat bytes）"

[dependencies]
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
poker_protocol = { path = "../poker_protocol" }
group = "0.13"

# sui SDK 相关依赖（仅用于 PTB 构建和 dev inspect 测试，wasm 构建不需要）
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", optional = true }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", features = ["pem", "ed25519", "secp256k1", "secp256r1", "zklogin"], optional = true }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", optional = true }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", optional = true }
prost-types = { version = "0.14", optional = true }
thiserror = { version = "2", optional = true }
ed25519-dalek = { version = "2", optional = true }
rand = { version = "0.8", optional = true }
bcs = { version = "0.1", optional = true }

[features]
default = ["sui-sdk"]
sui-sdk = [
    "dep:sui-sdk-types",
    "dep:sui-crypto",
    "dep:sui-rpc",
    "dep:sui-transaction-builder",
    "dep:prost-types",
    "dep:thiserror",
    "dep:ed25519-dalek",
    "dep:rand",
    "dep:bcs",
]