[package]
name = "vin_game_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
curve25519-dalek = { version = "4", features = ["rand_core"] }
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09" }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e494a36a76a0aab8c5d66d5557995faee5c1fb09", features = ["pem", "secp256k1"] }
axum = "0.7"
base64 = "0.21"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake2b_simd = "0.5"
rust_socketio = { version = "0.6", features = ["async"] }
futures-util = "0.3"
parking_lot = "0.12"
poker_protocol = { path = "../poker_protocol" }



[[bin]]
name = "vin_game_simulator"
path = "src/main.rs"
